# talea

./: Cargo.toml  README.md  article.txt  build.rs  generate_talea_scaffold.sh
.cargo/: config.toml
.github/workflows/: rust.yml
assets/: icon.icns
src/: ast.rs  lexer.rs  lib.rs  main.rs  parser.rs
src/runtime/: interpreter.rs  mod.rs
